syntax = "proto3";

package product;

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.product";

service FindProductById {
  rpc handle (FindProductByIdRequest) returns (FindProductByIdResponse);
}

message FindProductByIdRequest {
  string id = 1;
}

message FindProductByIdResponse {
  string stockId = 1;
  string name = 2;
  string description = 3;
  optional string imageUrl = 4;
  int32 price = 5;
  int32 quantity = 6;
}