syntax = "proto3";

package stock;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.stock";

service IncreaseStock {
  rpc handle (IncreaseStockRequest) returns (google.protobuf.Empty);
}

message IncreaseStockRequest {
  string id = 1;
  int32 increaseCount = 2;

  string idempotencyId = 3;
}